修改公共文件

--- a/src/assets/scss/global.scss
+++ b/src/assets/scss/global.scss
@@ -1,9 +1,10 @@
-$themeColor: #FF5940;
-$darkThemeColor: #ED2B40;
-$lightThemeColor: #FDB2B2;
-$lightColor: #999;
-$normalColor: #666;
-$darkColor: #333;
-$bgColor: #FBF8F8;
-$borderColor: #E0E0E0;
-$promptColor: #0078FF;
+$themeColor: #FF7B31;
+$lightThemeColor: #FFAF82;
+$lightColor: #8A9399;
+$normalColor: #475966;
+$darkColor: #2B3842;
+$bgColor: #F5F5F5;
+$disabledBg: #B0B5B8;
+$borderColor: #F0F0F0;
+
+$darkThemeColor: #FF0000;
