--- a/src/assets/scss/index.scss
+++ b/src/assets/scss/index.scss
@@ -129,7 +129,7 @@ time {
 }
 
 body {
-    background-color: #FBF8F8;
+    background-color: $bgColor;
     font-family: "PingFang SC", "Segoe UI", "Lucida Grande", Helvetica, "Microsoft YaHei", FreeSans, Arimo, "Droid Sans", "wenquanyi micro hei", "Hiragino Sans GB", "Hiragino Sans GB W3", Arial, sans-serif;
 }
 
@@ -297,7 +297,7 @@ button.icon {
     input {
         width: 84%;
         height: 4rem;
-        background: #FFFFFF;
+        background: #fff;
         border: none;
         box-shadow: 0px 1px 5px 0px #F2EDED;
         border-radius: 2.5rem;
@@ -354,7 +354,7 @@ button.icon {
         text-align: center;
         line-height: 6rem;
         background: $darkThemeColor;
-        color: #FFFFFF;
+        color: #fff;
         font-size: 1.6rem;
         font-weight: 500;
     }
@@ -370,19 +370,19 @@ button.icon {
 .overflow::-webkit-scrollbar {
     width: 0;
     height: 0;
-    background-color: #FFFFFF;
+    background-color: #fff;
 }
 /* 滚动条里面小方块 */
 .overflow::-webkit-scrollbar-thumb {
     border-radius: 0;
-    -webkit-box-shadow: inset 0 0 0 #FFFFFF;
-    background-color: #FFFFFF;
+    -webkit-box-shadow: inset 0 0 0 #fff;
+    background-color: #fff;
 }
 /* 滚动条里面轨道 */
 .overflow::-webkit-scrollbar-track {
     border-radius: 0;
-    -webkit-box-shadow: inset 0 0 0 #FFFFFF;
-    background-color: #FFFFFF;
+    -webkit-box-shadow: inset 0 0 0 #fff;
+    background-color: #fff;
 }
 
 .v-modal {
