增加绑卡页

--- a/src/assets/scss/global.scss
+++ b/src/assets/scss/global.scss
@@ -2,9 +2,9 @@ $themeColor: #FF7B31;
 $lightThemeColor: #FFAF82;
 $lightColor: #8A9399;
 $normalColor: #475966;
-$darkColor: #2B3842;
-$bgColor: #F5F5F5;
+$darkColor: #1A2833;
+$bgColor: #f8f8f8;
 $disabledBg: #B0B5B8;
-$borderColor: #F0F0F0;
+$borderColor: #EAEAEA;
 
 $darkThemeColor: #FF0000;
