--- a/src/assets/scss/reset.scss
+++ b/src/assets/scss/reset.scss
@@ -124,7 +124,7 @@ p {
 // }
 
 body {
-  background-color: #f5f5f5;
+  background-color: $bgColor;
   font-family: "PingFang SC", "Segoe UI", "Lucida Grande", Helvetica, "Microsoft YaHei", FreeSans, Arimo, "Droid Sans", "wenquanyi micro hei", "Hiragino Sans GB", "Hiragino Sans GB W3", Arial, sans-serif;
 }
 
