--- a/src/assets/scss/index.scss
+++ b/src/assets/scss/index.scss
@@ -174,6 +174,8 @@ button, input {
   
 button {
     overflow: visible;
+    border: 0px;
+    outline: none;
 }
   
 button, input, optgroup, select, textarea {
@@ -428,17 +430,58 @@ button.icon {
 /* input中的小按钮 */
 .page-verify {
     position: absolute;
-    bottom: 0.7rem;
     right: 1.5rem;
-    height: 2.9rem;
+    bottom: 1.7rem;
     width: 8.6rem;
-    max-width: 30%;
-    line-height: 3rem;
-    color: #fff;
+    height: 2.6rem;
+    line-height: 1;
     font-size: 1.2rem;
     text-align: center;
-    border: 0;
     border-radius: 2rem;
     -webkit-tap-highlight-color:rgba(0,0,0,0);
-    background: linear-gradient(to right,$lightThemeColor,$themeColor);
+    // background: linear-gradient(to right,$lightThemeColor,$themeColor);
+    background: transparent;
+    border: 1px solid $themeColor;
+    color: $themeColor;
+    &:active {
+        background: transparent;
+    }
+}
+
+.next-button.van-button--disabled {
+    color: #fff;
+    // background: $disabledBg;
+    background: linear-gradient(to right, #ffaf82, #ff7b31);
+    opacity: .5;
+}
+
+.page-verify.van-button--disabled {
+    color: $lightColor;
+    border: 1px solid $lightColor;
+}
+
+
+
+// 表单
+.page-field {
+    position: relative;
+    .page-part {
+        padding: 0 1.5rem;
+        background: #fff;
+    }
+}
+
+// 协议小字
+.page-protocol {
+    font-size: 1.2rem;
+    color: $darkColor;
+    text-align: center;
+
+    .protocol-a {
+        font-size: 1.2rem;
+        color: $themeColor;
+        line-height: 3.2rem;
+        display: inline-block;
+        text-decoration: underline;
+    }
 }
