--- a/src/assets/scss/vant.scss
+++ b/src/assets/scss/vant.scss
@@ -4,7 +4,8 @@
     background: rgba(0, 0, 0, 0.5);
 }
 
-.van-popup {
+/* van-popup(协议) */
+.van-popup-protocol {
     width: 80%;
     border-radius: 5px;
     background: transparent;
@@ -25,13 +26,13 @@
 
 /* van-button */
 .van-button--disabled {
-    background: $disabledBg;
+    background: $disabledBg ;
     opacity: 1;
 }
 
 /* van-cell-group */
 .van-cell-group {
-    height: 5.5rem;
+    height: 6rem;
     position: relative;
     .van-cell-group-input {
         height: 4rem;
@@ -41,7 +42,7 @@
         border: none;
         background-color: #fff;
         color: $normalColor;
-        font-size: 1.6rem;
+        font-size: 1.5rem;
         .van-field__control {
             height: 4rem !important;
             line-height: 4rem;  
@@ -60,12 +61,64 @@
     }
     .van-icon-close {
         right: 0;
-        top: 1.5rem;
+        top: 2rem;
         position: absolute;
         line-height: 4rem;
         color: $lightColor;
     }
     .verify-input-code {
         right: 10.1rem;
+    }
+}
+
+/* van-field */
+.van-field {
+    color: $darkColor;
+    line-height: 6rem;
+    padding: 0 1.5rem;
+    font-size: 1.5rem;
+    .van-field__label {
+        -webkit-box-flex: 0 !important;
+        -webkit-flex: none !important;
+        flex: none !important;
+        width: 35%;
+        min-width: 9rem;
+        max-width: 13rem;
+    }
+    .van-field-btn {
+        width: 8.6rem;
+        font-size: 1.2rem;
+        text-align: center;
+        border-radius: 2rem;
+        -webkit-tap-highlight-color:rgba(0,0,0,0);
+        // background: linear-gradient(to right,$lightThemeColor,$themeColor);
+        background: transparent;
+        border: 1px solid $themeColor;
+        color: $themeColor;
+        &:active {
+            background: transparent;
+        }
+    }
+    .van-button--disabled {
+        border: 1px solid $disabledBg;
+        color: $disabledBg;
+        opacity: 1;
+    }
+    &:not(:last-child)::after {
+        left: 1.5rem;
+        right: 1.5rem;
+        border-bottom: 1px solid $borderColor;
+    }
+}  
+
+/* van-checkbox */
+.van-checkbox {
+    .van-checkbox__label {
+        text-align: left;
+    }
+    .van-checkbox__icon .van-icon {
+        width: 1.14em;
+        height: 1.14em;
+        line-height: 1.14em;
     }
 }
