--- a/src/assets/scss/common.scss
+++ b/src/assets/scss/common.scss
@@ -1,7 +1,9 @@
     .van-cell {
-        padding: 18px 15px;
+      padding: 1.8rem 1.5rem;
     }
-    
+    .van-field__control{
+        line-height: 2.4rem;
+    }
     .van-cell__title {
         flex: 0.5
     }
