账单、团队 无数据处理

--- a/src/assets/scss/index.scss
+++ b/src/assets/scss/index.scss
@@ -280,6 +280,13 @@ button.icon {
     margin-bottom: 1rem;
 }
 
+.no-content {
+    font-size: 2.2rem;
+    text-align: center;
+    padding-top: 8rem;
+    font-weight: 500;
+}
+
 .search-input {
     position: relative;
     // margin-top: 1rem;
