--- a/src/assets/scss/index.scss
+++ b/src/assets/scss/index.scss
@@ -829,3 +829,48 @@ button.icon {
         padding: 2rem 1.5rem;
     }
 }
+
+// 我的银行卡
+.my-bank-card {
+    .bank-item {
+        width: 100%;
+        position: relative;
+        color: #fff;
+        font-size: 2.1rem;
+    }
+    .bank-item-bg {
+        width: 100%;
+    }
+    .bank-item-tips {
+        @include borderHalfPxRound(#fff, 0);
+        position: absolute;
+        font-size: 1.1rem;
+        line-height: 2rem;
+        top: 34.31%;
+        right: 9.33%;
+        padding: 0 .6rem;
+        font-weight: 300;
+    }
+    .bank-item-content {
+        vertical-align: middle;
+        position: absolute;
+        left: 12.53%;
+        top: 42.34%;
+        line-height: 2.7rem;
+    }
+    .bank-item-photo {
+        width: 2.7rem;
+        margin-right: .8rem;
+    }
+    .bank-item-no {
+        position: absolute;
+        left: 12.53%;
+        top: 72.99%;
+        font-size: 1.3rem;
+        line-height: 1;
+        font-weight: 300;
+    }
+    .bank-item-add {
+        width: 100%;
+    }
+}
