登陆按钮样式

--- a/src/assets/scss/index.scss
+++ b/src/assets/scss/index.scss
@@ -682,7 +682,7 @@ button.icon {
         width: 9rem;
         height: 1.6rem;
         line-height: 1;
-        font-size: 1.6rem;
+        font-size: 16px;
         border-radius: 0;
         border: none;
         border-left: 1px solid $normalColor;
