登陆按钮样式2

--- a/src/assets/scss/index.scss
+++ b/src/assets/scss/index.scss
@@ -679,7 +679,7 @@ button.icon {
         position: absolute;
         right: 2.5rem;
         top: 3.8rem;
-        width: 9rem;
+        width: 90px;
         height: 1.6rem;
         line-height: 1;
         font-size: 16px;
