我的银行卡页样式优化

--- a/src/assets/scss/index.scss
+++ b/src/assets/scss/index.scss
@@ -897,4 +897,11 @@ button.icon {
     .bank-item-add {
         width: 100%;
     }
+    .bank-item-noBg {
+        color: $darkColor;
+        .bank-item-tips {
+            @include borderHalfPxRound(#1A2833, 0);
+            position: absolute;
+        }
+    }
 }
