--- a/src/assets/scss/index.scss
+++ b/src/assets/scss/index.scss
@@ -751,11 +751,12 @@ button.icon {
         background: #fff;
         padding: 1.2rem 1rem 0;
         margin-bottom: 1rem;
+        .van-collapse-item__wrapper,
         .van-hairline--top-bottom::after {
             border: none;
         }
         .van-collapse {
-            border-top: 1px solid #eaeaea;
+            border-top: 1px solid $borderColor;
         }
     }
     .team-first, .second-child {
@@ -808,6 +809,7 @@ button.icon {
         margin-bottom: 1.2rem;
         margin-bottom: 1.2rem;
         padding: .6rem 1.2rem;
+        border: none;
         border-radius: 3px;
     }
     .second-no {
