--- a/src/assets/scss/index.scss
+++ b/src/assets/scss/index.scss
@@ -712,9 +712,9 @@ button.icon {
 .add-bank-card {
     padding-top: 1rem;
     height: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
+    // display: flex;
+    // flex-direction: column;
+    // justify-content: space-between;
     .page-protocol {
         margin: .7rem 0 8rem 1.5rem;
     }
