--- a/src/assets/scss/index.scss
+++ b/src/assets/scss/index.scss
@@ -752,7 +752,11 @@ button.icon {
     .popup-list {
         background: #fff;
         border-radius: 1.4rem;
-        overflow-y: scroll;
+        // overflow-y: scroll;
+        -webkit-box-flex:1;
+        -webkit-flex:1;
+        flex:1;
+        overflow:auto;
     }
     .popup-list-title {
         font-weight: 600;
