--- a/src/assets/scss/index.scss
+++ b/src/assets/scss/index.scss
@@ -988,3 +988,28 @@ button.icon {
         }
     }
 }
+
+// 我的折扣券
+.coupon-list {
+    padding: 1rem 1.5rem;
+    .coupon-add {
+        border-radius: .6rem;
+        background: #fff;
+        text-align: center;
+        font-size: 1.6rem;
+        line-height: 1.8rem;
+        padding: 1.6rem 0;
+        color: $darkColor;
+    }
+    .coupon-add-img {
+        width: 1.8rem;
+        height: 1.8rem;
+        margin-right: .8rem;
+    }
+    .coupon-item {
+        height: 9rem;
+        margin-top: 1rem;
+        background: #fff;
+        border-radius: .6rem;
+    }
+}
