--- a/src/assets/scss/index.scss
+++ b/src/assets/scss/index.scss
@@ -67,6 +67,15 @@
     }
 }
 
+@font-face {
+    font-family: DINAlternateBold;
+    src: url('./assets/font/DIN_Alternate_Bold.ttf');
+}
+
+.DINAlternate-Bold {
+    font-family: DINAlternateBold;
+}
+
 html {
     -ms-text-size-adjust: none;
     -webkit-text-size-adjust: none;
@@ -1015,7 +1024,8 @@ input::-webkit-input-placeholder {
     }
     .coupon-item-left {
         text-align: center;
-        padding: 1.4rem 1.7rem 1.7rem;
+        width: 37.7%;
+        padding: 1.4rem 0 1.7rem;
         color: #fff;
         background: linear-gradient(135deg, $lightThemeColor 0%,$themeColor 100%);
         border-radius: .6rem 0 0 .6rem;
