--- a/src/assets/scss/index.scss
+++ b/src/assets/scss/index.scss
@@ -548,7 +548,7 @@ input::-webkit-input-placeholder {
         border: none;
         border-radius: 3rem;
         -webkit-tap-highlight-color: rgba(0,0,0,0);
-        background: linear-gradient(to right,$lightThemeColor,$themeColor);
+        background: linear-gradient(to right, $lightThemeColor, $themeColor);
     }
 
     /* input中的小按钮 */
@@ -563,7 +563,7 @@ input::-webkit-input-placeholder {
         text-align: center;
         border-radius: 2rem;
         -webkit-tap-highlight-color:rgba(0,0,0,0);
-        // background: linear-gradient(to right,$lightThemeColor,$themeColor);
+        // background: linear-gradient(to right, $lightThemeColor, $themeColor);
         background: transparent;
         border: 1px solid $themeColor;
         color: $themeColor;
@@ -1027,7 +1027,7 @@ input::-webkit-input-placeholder {
         width: 37.7%;
         padding: 1.4rem 0 1.7rem;
         color: #fff;
-        background: linear-gradient(135deg, $lightThemeColor 0%,$themeColor 100%);
+        background: linear-gradient(135deg, $lightThemeColor, $themeColor);
         border-radius: .6rem 0 0 .6rem;
         font-size: 1.4rem;
     }
@@ -1057,7 +1057,7 @@ input::-webkit-input-placeholder {
     }
     .coupon-item-over {
         .coupon-item-left {
-            background: linear-gradient(135deg, #EBEBEB 0%,#A9A9A9 100%);
+            background: linear-gradient(135deg, #EBEBEB,#A9A9A9);
         }
         .coupon-item-right {
             color:$lightColor;
