地址列表校验

--- a/src/assets/scss/common.scss
+++ b/src/assets/scss/common.scss
@@ -36,3 +36,24 @@
         .buy-now-gray{
             opacity:0.5;
         }
+        .font-28{
+            font-size:2.8rem;
+        }
+        .font-18{
+            font-size:1.8rem;
+        }
+        .font-16{
+            font-size:1.6rem;
+        }
+        .color-833{
+            color:#1A2833;
+        }
+        .font-weight-500{
+            font-weight: 500;
+        }
+        .color-966{
+            color:#475966;
+        }
+        .font-weight-400{
+             font-weight: 400;
+        }
