预约页面提交

--- a/src/assets/scss/common.scss
+++ b/src/assets/scss/common.scss
@@ -57,3 +57,30 @@
         .font-weight-400{
              font-weight: 400;
         }
+        .font-15{
+            font-size:1.5rem;
+        }
+        .font-12{
+            font-size:1.2rem;
+        }
+        .font-14{
+            font-size:1.4rem;
+        }
+        .font-16{
+            font-size:1.6rem;
+        }
+        .color-399{
+            color:#8A9399;
+        }
+        .color-B31{
+            color:#FF7B31
+        }
+        .font-22{
+            font-size:2.2rem;
+        }
+        .opacity-style{
+            opacity: 0.5;
+        }
+        .font-17{
+            font-size:1.7rem;
+        }
