新增订单详情页面

--- a/src/assets/scss/global.scss
+++ b/src/assets/scss/global.scss
@@ -1,10 +1,10 @@
-$themeColor: #FF7B31;
-$lightThemeColor: #FFAF82;
-$lightColor: #8A9399;
+$themeColor: #ff7b31;
+$lightThemeColor: #ffaf82;
+$lightColor: #8a9399;
 $normalColor: #475966;
-$darkColor: #1A2833;
+$darkColor: #1a2833;
 $bgColor: #f5f5f5;
-$disabledBg: #B0B5B8;
-$borderColor: #EAEAEA;
+$disabledBg: #b0b5b8;
+$borderColor: #eaeaea;
 
-$darkThemeColor: #FF0000;
+$darkThemeColor: #ff0000;
