--- a/src/assets/scss/index.scss
+++ b/src/assets/scss/index.scss
@@ -1122,6 +1122,100 @@ input::-webkit-input-placeholder {
     }
 }
 
+// 订单详情
+.medical-order-detail {
+    padding-top: 1rem;
+    font-size: 1.4rem;
+    height: 100%;
+    color: $darkColor;
+    .main-content-request {
+        height: 100%;
+    }
+    .order-detail {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        height: 100%;
+    }
+    .detail-item {
+        background: #fff;
+        margin-bottom: 1rem;
+        padding-left: 1.5rem;
+    }
+    .detail-item-title {
+        line-height: 5rem;
+        font-size: 1.5rem;
+        color: $lightColor;
+        font-weight:500;
+        @include borderBottomHalfPx(#F0F0F0, 0);
+    }
+    .detail-item-content {
+        margin: 1.5rem 1.5rem 1.5rem 0;
+        background: $bgColor;
+        padding: .75rem 1.2rem;
+    }
+    .item-info {
+        display: flex;
+        font-size: 1.3rem;
+        line-height: 2.8rem;
+    }
+    .item-info-name {
+        width: 44%;
+        overflow: hidden;
+        white-space: nowrap;
+        text-overflow: ellipsis;
+    }
+    .item-info-count {
+        flex-grow: 1;
+        text-align: center;
+    }
+    .item-info-price {
+        width: 44%;
+        text-align: right;
+    }
+    .originalPrice {
+        color: $lightColor;
+        text-decoration: line-through;
+    }
+    .total-fees {
+        overflow: hidden;
+        line-height: 1;
+        padding: 0 2.7rem 2rem 1.2rem;
+        font-weight: 500;
+    }
+    .detail-info {
+        padding: 1rem 1.5rem 1.3rem 0;
+    }
+    .detail-info-item {
+        overflow: hidden;
+        line-height: 2.8rem;
+    }
+    .order-detail-foot {
+        width: 100%;
+        height: 6rem;
+        line-height: 3rem;
+        padding: 1.5rem;
+        background: #fff;
+        color: $lightColor;
+    }
+    .foot-total-fees {
+        color: $themeColor;
+        font-size: 2.2rem;
+        margin-right: .6rem;
+        font-weight: 700;
+    }
+    .pay-button {
+        font-weight: 600;
+        color: #fff;
+        border: none;
+        border-radius: 1.5rem;
+        height: 3rem;
+        line-height: 3rem;
+        width: 8.6rem;
+        background: linear-gradient(to right,$lightThemeColor,$themeColor);
+    }
+}
+
 // 我的报告
 .report-list {
     padding-top: 1rem;
