--- a/src/assets/scss/index.scss
+++ b/src/assets/scss/index.scss
@@ -1216,6 +1216,62 @@ input::-webkit-input-placeholder {
     }
 }
 
+// 预约详情
+.reserve-detail {
+    padding-top: 1rem;
+    font-size: 1.5em;
+    height: 100%;
+    color: $darkColor;
+    .main-content-request {
+        height: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+    }
+    .detail-item {
+        background: #fff;
+        margin: 1rem 0;
+        padding-left: 1.5rem;
+    }
+    .detail-item-title {
+        line-height: 5rem;
+        font-size: 1.5rem;
+        color: $lightColor;
+        font-weight:500;
+        @include borderBottomHalfPx(#F0F0F0, 0);
+    }
+    .detail-content {
+        background: #fff;
+        padding: 0 1.5rem;
+    }
+    .detail-content-item {
+        line-height: 4.9rem;
+        @include borderBottomHalfPx(#F0F0F0, 0);
+    }
+    .content-item-label {
+        width: 33.33%;
+        display: inline-block;
+    }
+    .detail-info {
+        padding: 1rem 1.5rem 1.3rem 0;
+    }
+    .detail-info-item {
+        overflow: hidden;
+        line-height: 2.8rem;
+        font-size: 1.4rem;
+    }
+    .detail-tips {
+        line-height: 2.2rem;
+        color: $lightColor;
+        font-size: 1.2rem;
+        padding-left: 1.5rem;
+    }
+    .page-button {
+        width: 100%;
+        padding: 2.5rem 14.4%;
+    }
+}
+
 // 我的报告
 .report-list {
     padding-top: 1rem;
