创建优惠券部分接口联调

--- a/src/assets/scss/index.scss
+++ b/src/assets/scss/index.scss
@@ -1188,7 +1188,7 @@ input::-webkit-input-placeholder {
         width: 44%;
         text-align: right;
     }
-    .originalPrice {
+    .original-amount {
         color: $lightColor;
         text-decoration: line-through;
     }
