预约详情 区分入口2

--- a/src/assets/scss/index.scss
+++ b/src/assets/scss/index.scss
@@ -1301,7 +1301,7 @@ input::-webkit-input-placeholder {
     .detail-info-item {
         overflow: hidden;
         padding-right: 1.5rem;
-        font-size: 1.1em;
+        font-size: 1.1rem;
         line-height: 3.5rem;
         color: #8A9399;
         @include borderBottomHalfPx(#F0F0F0, 0);
