增加弹框提示

--- a/src/assets/scss/common.scss
+++ b/src/assets/scss/common.scss
@@ -75,6 +75,9 @@
         .color-B31{
             color:#FF7B31
         }
+        .color64D{
+            color:#4B464D;
+        }
         .font-22{
             font-size:2.2rem;
         }
