--- a/src/assets/scss/common.scss
+++ b/src/assets/scss/common.scss
@@ -5,7 +5,7 @@
         line-height: 2.4rem;
     }
     .van-cell__title {
-        flex: 0.5
+        flex: 0.5!important;
     }
     
     .van-cell__value {
