--- a/src/assets/scss/index.scss
+++ b/src/assets/scss/index.scss
@@ -1227,7 +1227,8 @@ input::-webkit-input-placeholder {
         border-radius: 1.5rem;
         height: 3rem;
         line-height: 3rem;
-        width: 8.6rem;
+        font-size: 1.4rem;
+        padding: 0 1.5rem;
         background: linear-gradient(to right,$lightThemeColor,$themeColor);
     }
 }
