--- a/src/assets/scss/common.scss
+++ b/src/assets/scss/common.scss
@@ -24,7 +24,7 @@
             background: -webkit-linear-gradient(318deg, #ffaf82 0%, #ff7b31 100%);
             background: -o-linear-gradient(318deg, #ffaf82 0%, #ff7b31 100%);
             background: linear-gradient(132deg, #ffaf82 0%, #ff7b31 100%);
-            border-radius: 23px;
+            border-radius: 2.3rem;
             color: #fff;
             font-size: 1.7rem;
             font-weight: 500;
