--- a/src/assets/scss/index.scss
+++ b/src/assets/scss/index.scss
@@ -1054,7 +1054,7 @@ input::-webkit-input-placeholder {
     .close-btn {
         font-size: 1.4rem;
         padding: 0 1.2rem;
-        line-height: 2.4rem;
+        height: 2.4rem;
         color: $themeColor;
         @include borderHalfPxRound(#ff7b31, 1.2rem);
         position: absolute;
