--- a/src/assets/scss/common.scss
+++ b/src/assets/scss/common.scss
@@ -13,7 +13,8 @@
     }
     
     .borderStyle {
-        height: 1px;
+        height: 0.5px;
+        border: 0.5px solid #EAEAEA;
         background: #EAEAEA;
         margin: 0 auto;
         margin-top: 2rem;
