--- a/src/assets/scss/index.scss
+++ b/src/assets/scss/index.scss
@@ -1059,7 +1059,6 @@ input::-webkit-input-placeholder {
     }
     .close-btn {
         font-size: 1.4rem;
-        padding: .6rem 1.1rem .5rem 1.2rem;;
         line-height: 1;
         color: $themeColor;
         @include borderHalfPxRound(#ff7b31, 1.2rem);
@@ -1071,6 +1070,9 @@ input::-webkit-input-placeholder {
         -moz-transform: translateY(-50%);
         -webkit-transform: translateY(-50%);
         -o-transform: translateY(-50%);
+        span {
+            margin: .6rem 1.1rem .5rem 1.2rem;
+        }
     }
     .coupon-item-over {
         .coupon-item-left {
