--- a/src/assets/scss/index.scss
+++ b/src/assets/scss/index.scss
@@ -1057,11 +1057,36 @@ input::-webkit-input-placeholder {
         font-weight: 400;
         color: $lightColor;
     }
+    .close-btn-border {
+        position: relative;
+        &::before {
+            content: '取消';
+            position: absolute;
+            top: 0;
+            bottom: 0;
+            left: 0;
+            right: 0;
+            width: 200%;
+            height: 200%;
+            font-size: 2.8rem;
+            border-radius: 2.4rem;
+            border: 1px solid $themeColor;
+            transform-origin: 0 0;
+            -webkit-transform-origin: 0 0;
+            transform: scale(.5, .5);
+            -webkit-transform: scale(.5, .5);
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            box-sizing:border-box;
+        }
+    }
     .close-btn {
         font-size: 1.4rem;
         line-height: 1;
         color: $themeColor;
-        @include borderHalfPxRound(#ff7b31, 1.2rem);
+        width: 5.2rem;
+        height:2.4rem;
         position: absolute;
         right: 1rem;
         top: 50%;
@@ -1070,9 +1095,6 @@ input::-webkit-input-placeholder {
         -moz-transform: translateY(-50%);
         -webkit-transform: translateY(-50%);
         -o-transform: translateY(-50%);
-        span {
-            margin: .6rem 1.1rem .5rem 1.2rem;
-        }
     }
     .coupon-item-over {
         .coupon-item-left {
