--- a/src/assets/scss/index.scss
+++ b/src/assets/scss/index.scss
@@ -732,7 +732,7 @@ input::-webkit-input-placeholder {
 // 绑卡页
 .add-bank-card {
     padding-top: 1rem;
-    height: 100%;
+    // height: 100%;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
