调整协议样式

--- a/src/assets/scss/index.scss
+++ b/src/assets/scss/index.scss
@@ -421,6 +421,44 @@ input::-webkit-input-placeholder {
     opacity: .2;
 }
 
+// 协议相关
+.agreement {
+    background-color: #F5F5F5;
+    padding-top: 1rem;
+    height: 100%;
+    .agreement-content {
+        width: 100%;
+        min-height: 100%;
+        background-color:#fff;
+        padding: 8px 20px 28px;
+    }
+    p {
+        margin-bottom: 6px;
+    }
+    .agreement-title {
+        color: #353535;
+        font-size: 18px;
+        font-weight: 700;
+        line-height: 50px;
+        text-align: center;
+    }
+    .agreement-main {
+        font-size: 14px;
+        line-height: 24px;
+        color:#4B464D;
+    }
+    .agreement-subtitle {
+        margin-bottom: 10px;
+    }
+    .weight {
+        font-weight:700;
+        color: #353535!important;
+    }
+    .text-indent-2em {
+        text-indent: 2em;
+    }
+}
+
 .main-content {
     font-size: 1.3rem;
     line-height: 1.9rem;
