--- a/src/assets/scss/index.scss
+++ b/src/assets/scss/index.scss
@@ -877,7 +877,6 @@ input::-webkit-input-placeholder {
         }
         .van-collapse {
             border-top: 1px solid $borderColor;
-            width: 100%;
         }
     }
     .team-first, .second-child {
@@ -935,11 +934,12 @@ input::-webkit-input-placeholder {
         padding: 0;
         border: none;
         border-radius: 3px;
-        width: 100%;
+    }
+    .van-cell__title {
+        flex: 1!important;
     }
     .second-no {
         height: 2.4rem;
-        width: 100%;
         line-height: 2.4rem;
         font-size: 1.5rem;
         color: #2B3842;
