--- a/src/assets/scss/index.scss
+++ b/src/assets/scss/index.scss
@@ -790,6 +790,7 @@ input::-webkit-input-placeholder {
     .card-popup {
         background: transparent;
         width: 96%;
+        height: 100%;
         padding: 0 2%;
         bottom: 0;
         left: 2%;
